--- a/package.json
+++ b/package.json
@@ -2,22 +2,33 @@
   "name": "tinyapp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "express_server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "./node_modules/.bin/nodemon -L express_server.js",
+    "test": "./node_modules/mocha/bin/mocha"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lovely-cups/tinyapp.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Charles",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/lovely-cups/tinyapp/issues"
   },
   "homepage": "https://github.com/lovely-cups/tinyapp#readme",
   "dependencies": {
+    "bcrypt": "2.0.0",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "cookie-session": "^1.4.0",
+    "ejs": "^3.1.5",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^8.1.3",
+    "nodemon": "^2.0.4"
   }
 }
